# place-intel

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
deploy/: remote-bootstrap.sh
docs/: API.md  agent-cli.md  operations.md
placeintel/: __init__.py  analyze.py  backup.py  cache.py  cli.py  config.py  deploy_smoke.py  discover.py  doctor.py  embed.py  language.py  photos.py  pipeline.py  planner.py  profiles.py  reviews.py  server.py
profiles/: _core.yaml  generic.yaml  lessons.yaml  rental.yaml
scripts/: validate-prd-contract.sh
tasks/: 2026-06-20 - prd agent-readiness-governance.md  2026-06-20 - prd cached-report-translation.md  README.md  prd-dossier-ux.md  prd-placeintel-agent-cli-api.md  prd-placeintel-language-adaptation.md  prd-placeintel-production-grade-master.md  prd-placeintel-production-ops.md  prd-placeintel-source-photos-navigation-clarity.md  prd-placeintel-world-class-ui-ux.md
test-results/: .last-run.json
tests/: photo-lightbox-source-url.spec.js  test_analyze_activity_risk.py  test_analyze_retry.py  test_ask_evidence_contract.py  test_backup_restore.py  test_cache_contract.py  test_cli_json_contract.py  test_deploy_smoke.py  test_discover_contract.py  test_doctor_contract.py  test_durable_jobs.py  test_language_contract.py  test_maps_url_contract.py  test_photo_source_goal_contract.py  test_photos_contract.py  test_pipeline_exact_place_refresh.py  test_pipeline_review_failure_fallback.py  test_prd_contract.py  test_review_salvage.py  test_review_translation.py  test_server_contract.py  (+2 more)
(+7 files in other folders)
